Assets/Scripts/WLang/Runtime/WLangParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:/UnityProject/WGame/Client/Assets/Scripts/WLang/Runtime/WLang.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class WLangParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		BOOLEAN=18, NULL=19, PASS=20, RETURN=21, IMPORT=22, DEFINE=23, CACHE_DEFINE=24, 
		WAIT=25, DO=26, AND=27, NOT=28, OR=29, WAITTIME=30, SELECTOR=31, SEQUENCE=32, 
		TRIGGER=33, CONDITION=34, TRIGGER_TIME=35, TRANS_TO_ANY=36, STATE=37, 
		CODE=38, BTREE=39, DECORATOR=40, AT=41, SHARP=42, OP_EQUAL=43, OP_ADD=44, 
		OP_SUB=45, OP_MUL=46, OP_DIV=47, IF=48, ELSEIF=49, ELSE=50, IN=51, WHILE=52, 
		FOR=53, OPENBRACE=54, CLOSEBRACE=55, OPENBRACK=56, CLOSEBRACK=57, OPENPAREN=58, 
		CLOSEPAREN=59, ID=60, INT=61, FLOAT=62, WS=63, CHAR=64, STRING=65, SLCOMMENT=66, 
		COMMNET=67, TITLE=68;
	public const int
		RULE_file = 0, RULE_fsmBuilder = 1, RULE_fileCode = 2, RULE_fsmBlock = 3, 
		RULE_fsmContent = 4, RULE_parametersMethodRef = 5, RULE_fsmTransition = 6, 
		RULE_fsmTrigger = 7, RULE_fsmCondition = 8, RULE_fsmTriggerTime = 9, RULE_bTreeBuilder = 10, 
		RULE_treeBlock = 11, RULE_treeContent = 12, RULE_numParam = 13, RULE_parameters = 14, 
		RULE_parametersDef = 15, RULE_expr = 16, RULE_exprLambda = 17, RULE_exprMethod = 18, 
		RULE_exprID = 19, RULE_exprMethodRef = 20, RULE_exprList = 21, RULE_exprInt = 22, 
		RULE_primary = 23, RULE_statement = 24, RULE_waitStatement = 25, RULE_ifStatement = 26, 
		RULE_ifStat = 27, RULE_elseIfStat = 28, RULE_elseStat = 29, RULE_whileStatement = 30, 
		RULE_forStatement = 31, RULE_block = 32, RULE_point = 33;
	public static readonly string[] ruleNames = {
		"file", "fsmBuilder", "fileCode", "fsmBlock", "fsmContent", "parametersMethodRef", 
		"fsmTransition", "fsmTrigger", "fsmCondition", "fsmTriggerTime", "bTreeBuilder", 
		"treeBlock", "treeContent", "numParam", "parameters", "parametersDef", 
		"expr", "exprLambda", "exprMethod", "exprID", "exprMethodRef", "exprList", 
		"exprInt", "primary", "statement", "waitStatement", "ifStatement", "ifStat", 
		"elseIfStat", "elseStat", "whileStatement", "forStatement", "block", "point"
	};

	private static readonly string[] _LiteralNames = {
		null, "'->'", "'<-'", "':'", "','", "'!'", "'*='", "'/='", "'+='", "'-='", 
		"'=='", "'!='", "'>'", "'>='", "'<'", "'<='", "'=>'", "'.'", null, "'nil'", 
		"'pass'", "'return'", "'import'", "'def'", "'cDef'", "'WAIT'", "'DO'", 
		"'and'", "'not'", "'or'", "'WAIT_TIME'", "'SELECTOR'", "'SEQUENCE'", "'TRIGGER'", 
		"'CONDITION'", "'TRIGGER_TIME'", "'TRANS_TO_ANY'", "'STATE'", "'CODE'", 
		"'BTREE'", "'DECORATOR'", "'@'", "'#'", "'='", "'+'", "'-'", "'*'", "'/'", 
		"'if'", "'elif'", "'else'", "'in'", "'while'", "'for'", "'{'", "'}'", 
		"'['", "']'", "'('", "')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "BOOLEAN", "NULL", "PASS", "RETURN", 
		"IMPORT", "DEFINE", "CACHE_DEFINE", "WAIT", "DO", "AND", "NOT", "OR", 
		"WAITTIME", "SELECTOR", "SEQUENCE", "TRIGGER", "CONDITION", "TRIGGER_TIME", 
		"TRANS_TO_ANY", "STATE", "CODE", "BTREE", "DECORATOR", "AT", "SHARP", 
		"OP_EQUAL", "OP_ADD", "OP_SUB", "OP_MUL", "OP_DIV", "IF", "ELSEIF", "ELSE", 
		"IN", "WHILE", "FOR", "OPENBRACE", "CLOSEBRACE", "OPENBRACK", "CLOSEBRACK", 
		"OPENPAREN", "CLOSEPAREN", "ID", "INT", "FLOAT", "WS", "CHAR", "STRING", 
		"SLCOMMENT", "COMMNET", "TITLE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "WLang.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static WLangParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public WLangParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public WLangParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfStatementContext[] ifStatement() {
			return GetRuleContexts<IfStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfStatementContext ifStatement(int i) {
			return GetRuleContext<IfStatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WhileStatementContext[] whileStatement() {
			return GetRuleContexts<WhileStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public WhileStatementContext whileStatement(int i) {
			return GetRuleContext<WhileStatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ForStatementContext[] forStatement() {
			return GetRuleContexts<ForStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ForStatementContext forStatement(int i) {
			return GetRuleContext<ForStatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WaitStatementContext[] waitStatement() {
			return GetRuleContexts<WaitStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public WaitStatementContext waitStatement(int i) {
			return GetRuleContext<WaitStatementContext>(i);
		}
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IWLangVisitor<TResult> typedVisitor = visitor as IWLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (((((_la - 5)) & ~0x3f) == 0 && ((1L << (_la - 5)) & 1993275011910590465L) != 0)) {
				{
				State = 73;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case T__4:
				case BOOLEAN:
				case NULL:
				case PASS:
				case RETURN:
				case IMPORT:
				case DEFINE:
				case NOT:
				case AT:
				case OP_SUB:
				case OPENBRACK:
				case OPENPAREN:
				case ID:
				case INT:
				case FLOAT:
				case CHAR:
				case STRING:
					{
					State = 68;
					statement();
					}
					break;
				case IF:
					{
					State = 69;
					ifStatement();
					}
					break;
				case WHILE:
					{
					State = 70;
					whileStatement();
					}
					break;
				case FOR:
					{
					State = 71;
					forStatement();
					}
					break;
				case WAIT:
					{
					State = 72;
					waitStatement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 77;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FsmBuilderContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FileCodeContext fileCode() {
			return GetRuleContext<FileCodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FsmBlockContext[] fsmBlock() {
			return GetRuleContexts<FsmBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FsmBlockContext fsmBlock(int i) {
			return GetRuleContext<FsmBlockContext>(i);
		}
		public FsmBuilderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fsmBuilder; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IWLangVisitor<TResult> typedVisitor = visitor as IWLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFsmBuilder(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FsmBuilderContext fsmBuilder() {
		FsmBuilderContext _localctx = new FsmBuilderContext(Context, State);
		EnterRule(_localctx, 2, RULE_fsmBuilder);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==CODE) {
				{
				State = 78;
				fileCode();
				}
			}

			State = 84;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 197568495622L) != 0)) {
				{
				{
				State = 81;
				fsmBlock();
				}
				}
				State = 86;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FileCodeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CODE() { return GetToken(WLangParser.CODE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPENBRACE() { return GetToken(WLangParser.OPENBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FileContext file() {
			return GetRuleContext<FileContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSEBRACE() { return GetToken(WLangParser.CLOSEBRACE, 0); }
		public FileCodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fileCode; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IWLangVisitor<TResult> typedVisitor = visitor as IWLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFileCode(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileCodeContext fileCode() {
		FileCodeContext _localctx = new FileCodeContext(Context, State);
		EnterRule(_localctx, 4, RULE_fileCode);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87;
			Match(CODE);
			State = 88;
			Match(OPENBRACE);
			State = 89;
			file();
			State = 90;
			Match(CLOSEBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FsmBlockContext : ParserRuleContext {
		public FsmBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fsmBlock; } }
	 
		public FsmBlockContext() { }
		public virtual void CopyFrom(FsmBlockContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class FSMConditionContext : FsmBlockContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONDITION() { return GetToken(WLangParser.CONDITION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPENBRACE() { return GetToken(WLangParser.OPENBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSEBRACE() { return GetToken(WLangParser.CLOSEBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FsmConditionContext[] fsmCondition() {
			return GetRuleContexts<FsmConditionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FsmConditionContext fsmCondition(int i) {
			return GetRuleContext<FsmConditionContext>(i);
		}
		public FSMConditionContext(FsmBlockContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IWLangVisitor<TResult> typedVisitor = visitor as IWLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFSMCondition(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FSMTriggerContext : FsmBlockContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TRIGGER() { return GetToken(WLangParser.TRIGGER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPENBRACE() { return GetToken(WLangParser.OPENBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSEBRACE() { return GetToken(WLangParser.CLOSEBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FsmTriggerContext[] fsmTrigger() {
			return GetRuleContexts<FsmTriggerContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FsmTriggerContext fsmTrigger(int i) {
			return GetRuleContext<FsmTriggerContext>(i);
		}
		public FSMTriggerContext(FsmBlockContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IWLangVisitor<TResult> typedVisitor = visitor as IWLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFSMTrigger(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FSMStateContext : FsmBlockContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STATE() { return GetToken(WLangParser.STATE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPENBRACE() { return GetToken(WLangParser.OPENBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSEBRACE() { return GetToken(WLangParser.CLOSEBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FsmContentContext[] fsmContent() {
			return GetRuleContexts<FsmContentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FsmContentContext fsmContent(int i) {
			return GetRuleContext<FsmContentContext>(i);
		}
		public FSMStateContext(FsmBlockContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IWLangVisitor<TResult> typedVisitor = visitor as IWLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFSMState(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FSMStartContext : FsmBlockContext {
		public IToken s;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(WLangParser.ID, 0); }
		public FSMStartContext(FsmBlockContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IWLangVisitor<TResult> typedVisitor = visitor as IWLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFSMStart(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FSMTriggerTimeContext : FsmBlockContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TRIGGER_TIME() { return GetToken(WLangParser.TRIGGER_TIME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPENBRACE() { return GetToken(WLangParser.OPENBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSEBRACE() { return GetToken(WLangParser.CLOSEBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FsmTriggerTimeContext[] fsmTriggerTime() {
			return GetRuleContexts<FsmTriggerTimeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FsmTriggerTimeContext fsmTriggerTime(int i) {
			return GetRuleContext<FsmTriggerTimeContext>(i);
		}
		public FSMTriggerTimeContext(FsmBlockContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IWLangVisitor<TResult> typedVisitor = visitor as IWLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFSMTriggerTime(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FSMExitContext : FsmBlockContext {
		public IToken s;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(WLangParser.ID, 0); }
		public FSMExitContext(FsmBlockContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IWLangVisitor<TResult> typedVisitor = visitor as IWLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFSMExit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FsmBlockContext fsmBlock() {
		FsmBlockContext _localctx = new FsmBlockContext(Context, State);
		EnterRule(_localctx, 6, RULE_fsmBlock);
		int _la;
		try {
			State = 132;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case STATE:
				_localctx = new FSMStateContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 92;
				Match(STATE);
				State = 93;
				Match(OPENBRACE);
				State = 97;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==ID) {
					{
					{
					State = 94;
					fsmContent();
					}
					}
					State = 99;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 100;
				Match(CLOSEBRACE);
				}
				break;
			case TRIGGER:
				_localctx = new FSMTriggerContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 101;
				Match(TRIGGER);
				State = 102;
				Match(OPENBRACE);
				State = 106;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==ID) {
					{
					{
					State = 103;
					fsmTrigger();
					}
					}
					State = 108;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 109;
				Match(CLOSEBRACE);
				}
				break;
			case CONDITION:
				_localctx = new FSMConditionContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 110;
				Match(CONDITION);
				State = 111;
				Match(OPENBRACE);
				State = 115;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==ID) {
					{
					{
					State = 112;
					fsmCondition();
					}
					}
					State = 117;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 118;
				Match(CLOSEBRACE);
				}
				break;
			case TRIGGER_TIME:
				_localctx = new FSMTriggerTimeContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 119;
				Match(TRIGGER_TIME);
				State = 120;
				Match(OPENBRACE);
				State = 124;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==ID) {
					{
					{
					State = 121;
					fsmTriggerTime();
					}
					}
					State = 126;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 127;
				Match(CLOSEBRACE);
				}
				break;
			case T__0:
				_localctx = new FSMStartContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 128;
				Match(T__0);
				State = 129;
				((FSMStartContext)_localctx).s = Match(ID);
				}
				break;
			case T__1:
				_localctx = new FSMExitContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 130;
				Match(T__1);
				State = 131;
				((FSMExitContext)_localctx).s = Match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FsmContentContext : ParserRuleContext {
		public IToken i;
		public ParametersMethodRefContext p;
		public IToken f;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(WLangParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(WLangParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParametersMethodRefContext parametersMethodRef() {
			return GetRuleContext<ParametersMethodRefContext>(0);
		}
		public FsmContentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fsmContent; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IWLangVisitor<TResult> typedVisitor = visitor as IWLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFsmContent(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FsmContentContext fsmContent() {
		FsmContentContext _localctx = new FsmContentContext(Context, State);
		EnterRule(_localctx, 8, RULE_fsmContent);
		try {
			State = 141;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 134;
				_localctx.i = Match(ID);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 135;
				_localctx.i = Match(ID);
				State = 136;
				Match(T__2);
				State = 137;
				_localctx.p = parametersMethodRef();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 138;
				_localctx.i = Match(ID);
				State = 139;
				Match(T__0);
				State = 140;
				_localctx.f = Match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParametersMethodRefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExprMethodRefContext[] exprMethodRef() {
			return GetRuleContexts<ExprMethodRefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprMethodRefContext exprMethodRef(int i) {
			return GetRuleContext<ExprMethodRefContext>(i);
		}
		public ParametersMethodRefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parametersMethodRef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IWLangVisitor<TResult> typedVisitor = visitor as IWLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParametersMethodRef(this);
			else return visitor.VisitChildren(this);
		}
	}
